# tandem

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMAGE_GUIDELINES.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  SECURITY.md  TESTING_UPDATES.md  artifacts_2100.pptx  artifacts_2100.tandem.ppt.json  capabilities.pptx  capabilities.tandem.ppt.json  commit_msg.txt  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.tests.json
crates/tandem-agent-teams/: Cargo.toml
crates/tandem-browser/: Cargo.toml
crates/tandem-channels/: Cargo.toml
crates/tandem-channels/src/: channel_registry.rs  config.rs  discord.rs  dispatcher.rs  lib.rs  signing.rs  slack.rs  slack_blocks.rs  telegram.rs  traits.rs
crates/tandem-channels/src/dispatcher_parts/: part01.rs  part02.rs  part07.rs
crates/tandem-core/: Cargo.toml
crates/tandem-core/src/: config.rs  engine_loop.rs  lib.rs  message_part_reducer.rs  mutation_checkpoints.rs  permission_defaults.rs  permissions.rs  plugins.rs  provider_auth_store.rs  session_title.rs  storage.rs  storage_paths.rs  tool_policy.rs  tool_router.rs
crates/tandem-core/src/engine_loop/: loop_guards.rs  loop_tuning.rs  prewrite_gate.rs  prompt_execution.rs  prompt_helpers.rs  prompt_runtime.rs  tool_execution.rs  types.rs
crates/tandem-core/src/storage_parts/: part01.rs
crates/tandem-document/: Cargo.toml
crates/tandem-enterprise-contract/: Cargo.toml
crates/tandem-enterprise-contract/src/: governance.rs  lib.rs
crates/tandem-governance-engine/: Cargo.toml  LICENSE
crates/tandem-governance-engine/src/: lib.rs
crates/tandem-memory/: Cargo.toml
crates/tandem-memory/src/: embeddings.rs  governance.rs  lib.rs
crates/tandem-memory/src/manager_parts/: part01.rs
crates/tandem-observability/: Cargo.toml
crates/tandem-observability/src/: lib.rs
crates/tandem-plan-compiler/: Cargo.toml  LICENSE  README.md
crates/tandem-plan-compiler/src/: api.rs  automation_projection.rs  contracts.rs  decomposition.rs  dependency_planner.rs  host.rs  lib.rs  materialization.rs  mission_blueprint.rs  mission_preview.rs  mission_runtime.rs  plan_bundle.rs  plan_overlap.rs  plan_package.rs  plan_validation.rs  planner_build.rs  planner_drafts.rs  planner_invoke.rs  planner_loop.rs  planner_messages.rs  planner_prompts.rs  planner_session.rs  planner_types.rs  runtime_projection.rs  workflow_plan.rs
crates/tandem-plan-compiler/src/workflow_plan_parts/: part01.rs  part02.rs
crates/tandem-plan-compiler/tests/: api_surface.rs  contracts_roundtrip.rs  host_adapters.rs
crates/tandem-providers/: Cargo.toml
crates/tandem-providers/src/: lib.rs
crates/tandem-providers/src/lib_parts/: part02.rs  part03.rs  part04.rs
crates/tandem-runtime/: Cargo.toml
crates/tandem-runtime/src/: mcp.rs  mcp_ready.rs
crates/tandem-runtime/src/mcp_parts/: part01.rs  part02.rs  part03.rs
crates/tandem-server/: Cargo.toml
crates/tandem-server/resources/issue_templates/: bug_report.md
crates/tandem-server/resources/mcp-catalog/: README.md  index.json
crates/tandem-server/src/: agent_teams.rs  bug_monitor_github.rs  capability_resolver.rs  http.rs  lib.rs  mcp_catalog.rs  mcp_catalog_generated.rs  optimization.rs  pack_builder.rs  pack_manager.rs  preset_registry.rs  workflows.rs
crates/tandem-server/src/app/: state.rs  tasks.rs
crates/tandem-server/src/automation_v2/: executor.rs  executor_helpers.rs  executor_tests.rs  governance.rs  types.rs
crates/tandem-server/src/benchmarking/: mod.rs
crates/tandem-server/src/bug_monitor/: comment_summary.rs  error_provenance.rs  log_artifacts.rs  log_parser.rs  log_watcher.rs  mod.rs  service.rs  types.rs
crates/tandem-server/src/config/: channels.rs  env.rs  paths.rs
crates/tandem-server/src/http/: approvals.rs  automation_projection_runtime.rs  bug_monitor.rs  capabilities.rs  channels_api.rs  coder.rs  config_providers.rs  context_packs.rs  context_runs.rs  context_types.rs  failure_reporter.rs  global.rs  governance.rs  mcp.rs  middleware.rs  mission_builder.rs  mission_builder_host.rs  mission_builder_runtime.rs  missions_teams.rs  optimizations.rs  pack_builder.rs  packs.rs  permissions_questions.rs  presets.rs  resources.rs  router.rs  routes_approvals.rs  (+38 more)
crates/tandem-skills/: Cargo.toml
crates/tandem-tools/: Cargo.toml
crates/tandem-tools/src/: lib.rs
crates/tandem-tui/: Cargo.toml  README.md
crates/tandem-tui/src/: app.rs  main.rs
crates/tandem-tui/tests/: agent_scenarios.jsonl  e2e_pty_smoke.rs
crates/tandem-types/: Cargo.toml
crates/tandem-types/src/: approvals.rs  lib.rs  session.rs
crates/tandem-wire/: Cargo.toml
crates/tandem-wire/src/: convert.rs  provider.rs  session.rs
crates/tandem-workflows/: Cargo.toml
crates/tandem-workflows/src/: lib.rs  plan_package.rs
engine/: Cargo.toml  README.md
engine/resources/: default_knowledge_bundle.json  default_knowledge_manifest.json
engine/src/: default_knowledge_bundle.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/resources/: default_config.json
src-tauri/resources/binaries/: README.md
src-tauri/src/: commands.rs  error.rs  file_watcher.rs  keystore.rs  lib.rs  llm_router.rs  modes.rs  packs.rs  presentation.rs  sidecar.rs  sidecar_manager.rs  skill_templates.rs  skills.rs  state.rs  stream_hub.rs  tandem_config.rs  tool_history.rs  tool_proxy.rs  vault.rs
src-tauri/src/commands/: api_keys.rs  basic.rs  channels.rs  file_tree_sessions.rs  mcp.rs  memory.rs  messages.rs  models_and_logs.rs  orchestrator_core.rs  orchestrator_runtime.rs  packs_updater.rs  plugins_and_plan.rs  presentation_and_files.rs  project.rs  providers.rs  python_and_skills.rs  ralph.rs  routines_and_planning.rs  sidecar.rs  sidecar_tools.rs  theme.rs  undo_and_approvals.rs  vault.rs
src-tauri/src/memory/: chunking.rs  db.rs  embeddings.rs  indexer.rs  manager.rs  mod.rs  types.rs
src-tauri/src/orchestrator/: agents.rs  concurrency_tests.rs  engine.rs  scheduler.rs  store.rs  types.rs
src-tauri/src/ralph/: service.rs
src-tauri/windows/: nsis-hooks.nsh
(+800 files in other folders)
