[workspace]
members = [
    "src-tauri",
    "engine",
    "crates/tandem-browser",
    "crates/tandem-types",
    "crates/tandem-wire",
    "crates/tandem-core",
    "crates/tandem-document",
    "crates/tandem-providers",
    "crates/tandem-tools",
    "crates/tandem-server",
    "crates/tandem-runtime",
    "crates/tandem-tui",
    "crates/tandem-observability",
    "crates/tandem-skills",
    "crates/tandem-memory",
    "crates/tandem-orchestrator",
    "crates/tandem-channels",
    "crates/tandem-agent-teams",
    "crates/tandem-workflows",
]
resolver = "2"

[patch.crates-io]
esaxx-rs = { path = "third_party/esaxx-rs" }
