[workspace]
members = [
    "src-tauri",
    "engine",
    "crates/tandem-browser",
    "crates/tandem-types",
    "crates/tandem-wire",
    "crates/tandem-core",
    "crates/tandem-document",
    "crates/tandem-providers",
    "crates/tandem-tools",
    "crates/tandem-server",
    "crates/tandem-runtime",
    "crates/tandem-tui",
    "crates/tandem-observability",
    "crates/tandem-skills",
    "crates/tandem-memory",
    "crates/tandem-orchestrator",
    "crates/tandem-enterprise-contract",
    "crates/tandem-channels",
    "crates/tandem-agent-teams",
    "crates/tandem-workflows",
    "crates/tandem-plan-compiler",
    "crates/tandem-governance-engine",
]
resolver = "2"

[patch.crates-io]
esaxx-rs = { path = "third_party/esaxx-rs" }

[profile.fast-release]
inherits = "release"
incremental = true
codegen-units = 32
opt-level = 2
lto = "off"
