[package]
name = "tandem"
version = "0.2.3"
description = "A local-first, zero-trust AI workspace application"
authors = ["Tandem Contributors"]
edition = "2021"

[lib]
name = "tandem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-stream = "0.3"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
argon2 = "0.5"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
ignore = "0.4"
ppt-rs = "0.2"
dirs = "5"
serde_yaml = "0.9"
notify = "6.1"
regex = "1"
tokio-util = { version = "0.7", features = ["rt"] }

# Memory context dependencies
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
sqlite-vec = "0.1.6"
tiktoken-rs = "0.6"
once_cell = "1.20"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"
