[package]
name = "tandem-agent-teams"
version = "0.3.22"
description = "Agent-team compatibility models and runtime primitives for Tandem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tandem-types = { path = "../tandem-types", version = "0.3.22" }



