[package]
name = "tandem-channels"
version = "0.5.2"
description = "External messaging channel integrations for Tandem (Telegram, Discord, Slack)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
ed25519-dalek = "2"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
parking_lot = "0.12"
pulldown-cmark = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }


