[package]
name = "tandem-core"
version = "0.4.35"
description = "Core types and helpers for the Tandem engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio-util = "0.7"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
keyring = "2"
base64 = "0.22"
tandem-types = { path = "../tandem-types", version = "0.4.35" }
tandem-wire = { path = "../tandem-wire", version = "0.4.35" }
tandem-tools = { path = "../tandem-tools", version = "0.4.35" }
tandem-providers = { path = "../tandem-providers", version = "0.4.35" }
tandem-observability = { path = "../tandem-observability", version = "0.4.35" }

[dev-dependencies]
tempfile = "3"









































