[package]
name = "tandem-enterprise-contract"
version = "0.4.30"
description = "Public enterprise contract and tenant context types for Tandem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }






