[package]
name = "tandem-governance-engine"
version = "0.4.42"
description = "Premium governance and recursive-authoring policy engine for Tandem"
license = "BUSL-1.1"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tandem-enterprise-contract = { path = "../tandem-enterprise-contract", version = "0.4.42" }
