[package]
name = "tandem-memory"
version = "0.3.7"
description = "Memory storage and embedding utilities for Tandem"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"

[features]
default = []
local-embeddings = ["dep:fastembed"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "uuid", "blob"] }
sqlite-vec = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "fs", "io-util", "macros", "rt-multi-thread"] }
tracing = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tiktoken-rs = "0.6"
ignore = "0.4"
sha2 = "0.10"
dirs = "5.0"
once_cell = "1.20"

[dev-dependencies]
tempfile = "3"
