[package]
name = "tandem-plan-compiler"
version = "0.4.36"
description = "Mission and plan compiler boundary for Tandem"
license = "BUSL-1.1"
repository = "https://github.com/frumu-ai/tandem"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tandem-core = { path = "../tandem-core", version = "0.4.36" }
tandem-orchestrator = { path = "../tandem-orchestrator", version = "0.4.36" }
tandem-types = { path = "../tandem-types", version = "0.4.36" }
tandem-workflows = { path = "../tandem-workflows", version = "0.4.36" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }






















