[package]
name = "tandem-runtime"
version = "0.3.7"
description = "Runtime utilities for Tandem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
