[package]
name = "tandem-server"
version = "0.3.8"
description = "HTTP server for Tandem engine APIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
ignore = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = true, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
tandem-core = { path = "../tandem-core", version = "0.3.8" }
tandem-providers = { path = "../tandem-providers", version = "0.3.8" }
tandem-runtime = { path = "../tandem-runtime", version = "0.3.8" }
tandem-tools = { path = "../tandem-tools", version = "0.3.8" }
tandem-skills = { path = "../tandem-skills", version = "0.3.8" }
tandem-memory = { path = "../tandem-memory", version = "0.3.8" }
tandem-orchestrator = { path = "../tandem-orchestrator", version = "0.3.8" }
tandem-types = { path = "../tandem-types", version = "0.3.8" }
tandem-wire = { path = "../tandem-wire", version = "0.3.8" }
tandem-channels = { path = "../tandem-channels", version = "0.3.8" }

[dev-dependencies]
tower = "0.5"
