[package]
name = "tandem-server"
version = "0.3.28"
description = "HTTP server for Tandem engine APIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.12"
futures = "0.3"
dirs = "6"
ignore = "0.4"
image = "0.25"
regex = "1"
reqwest = { version = "0.12", default-features = true, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
tandem-core = { path = "../tandem-core", version = "0.3.28" }
tandem-providers = { path = "../tandem-providers", version = "0.3.28" }
tandem-runtime = { path = "../tandem-runtime", version = "0.3.28" }
tandem-tools = { path = "../tandem-tools", version = "0.3.28" }
tandem-skills = { path = "../tandem-skills", version = "0.3.28" }
tandem-memory = { path = "../tandem-memory", version = "0.3.28", features = ["local-embeddings"] }
tandem-orchestrator = { path = "../tandem-orchestrator", version = "0.3.28" }
tandem-types = { path = "../tandem-types", version = "0.3.28" }
tandem-wire = { path = "../tandem-wire", version = "0.3.28" }
tandem-channels = { path = "../tandem-channels", version = "0.3.28" }

[dev-dependencies]
tower = "0.5"









