[package]
name = "tandem-skills"
version = "0.3.7"
description = "Skill packaging and discovery for Tandem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dirs = "6"
zip = "0.6"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
