[package]
name = "tandem-types"
version = "0.5.3"
description = "Shared Tandem data types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tandem-enterprise-contract = { path = "../tandem-enterprise-contract", version = "0.5.3" }
uuid = { version = "1", features = ["serde", "v4"] }


