[package]
name = "tandem-workflows"
version = "0.4.36"
description = "Workflow definitions and loading for Tandem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frumu-ai/tandem"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tandem-orchestrator = { path = "../tandem-orchestrator", version = "0.4.36" }
tandem-types = { path = "../tandem-types", version = "0.4.36" }

[dev-dependencies]
tempfile = "3"



























